2005-11-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/include/security/_pam_compat.h: Fix wrong #ifdef nesting.
	Redefine PAM_CHANGE_EXPIRED_AUTHTOK [#604380]

2005-11-09  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_access/pam_access.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name.
	* modules/pam_time/pam_time.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name. Allow unset tty.
	(logic_member): Allow matching ':' in tty name.
	* modules/pam_group/pam_group.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name. Allow unset tty.
	(logic_member): Allow matching ':' in tty name.

	* libpam_misc/misc_conv.c (read_string): Read only up to EOL if stdin
	is not terminal.

2005-11-07  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c (_unix_verify_shadow): Use
	correct variable names.

2005-11-06  Steve Langasek <vorlon@debian.org>

	* modules/pam_env/pam_env.c: don't treat a missing
	/etc/environment as a fatal error when attempting to read it,
	and try to read this file by default; this restores the behavior
	from Linux-PAM 0.76.

2005-11-02  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/support.c (_unix_getpwnam): Fix typo [#1224807]
	by ohyajapn.

	* modules/pam_unix/pam_unix_passwd.c (_unix_verify_shadow): Change the
	logic when comparing dates to handle corner cases better [#1245888].

2005-10-31  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_filter/pam_filter.c: Use XCASE only if defined
	[#624214]

2005-10-27  Thorsten Kukuk  <kukuk@suse.de>

	* doc/man/pam.8: Fix wording for authentication chapter [#1197444]

2005-10-26  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary),
	modules/pam_unix/pam_unix_passwd.c (_unix_run_shadow_binary),
	modules/pam_unix/support.c (_unix_run_shadow_binary_): Set real
	uid to 0 before executing the helper if SELinux is enabled.
	* modules/pam_unix/unix_chkpwd.c (main): Disable user check only